--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
+  "scripts": {
+    "build": "rsbuild build"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@rsbuild/core": "^1.3.15",
